i added the css folder

--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,9 @@ h3 {
     margin: 0 auto -60px;
   }
 
-  
+
+  gg
+
   .barn1 {
     background-image: url("./img/barn.2.jpg");
     height: 300px;
