--- a/css/vpakke.css
+++ b/css/vpakke.css
@@ -1,114 +1,110 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    background-color: lightgray;
-  }
-  
-  nav{
-    background-color: rgb( 0,174,239);
-    padding: 10px 0;
-  }
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  background-color: lightgray;
+}
 
-  .footer{
-    background-color: #000000;
-     text-align: center;
-     
-   }
-   
-   .footer-text{
-     color: white;
-   }
-  
-  .logo {
-    width: 150px;
-  }
-  
-  .curser {
-    cursor: pointer;
-  }
-  
-  .wrapper {
-    width: 100%;
-    margin: 0 auto;
-  }  
+nav {
+  background-color: rgb(0, 174, 239);
+  padding: 10px 0;
+}
 
-  .unicef-text {
-    text-align: center;
-    color: white;
-  }
+.footer {
+  background-color: #000000;
+  text-align: center;
+}
+
+.footer-text {
+  color: white;
+}
+
+.logo {
+  width: 150px;
+}
+
+.curser {
+  cursor: pointer;
+}
+
+.wrapper {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.unicef-text {
+  text-align: center;
+  color: white;
+}
 
 /* img*/
 img {
-    display: block;
-    margin: 0 auto;
-    width: 300px;
-  }
+  display: block;
+  margin: 0 auto;
+  width: 300px;
+}
 
 /* knapp*/
 .button {
-    background-color: #77871c;
-    border: none;
-    color: white;
-    padding: 15px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    margin-right: 99px;
-    border-radius: 12px;
-  }
-  
-  .button1 {
-    background-color: #0074c8;
-    border: none;
-    color: white;
-    padding: 15px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 12px;
-  }
+  background-color: #77871c;
+  border: none;
+  color: white;
+  padding: 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  margin-right: 99px;
+  border-radius: 12px;
+}
 
+.button1 {
+  background-color: #0074c8;
+  border: none;
+  color: white;
+  padding: 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 12px;
+}
+
+section {
+  width: 300px;
+  margin: 10px auto 10px;
+  background-color: white;
+  padding: 20px;
+}
+
+@media screen and (min-width: 768px) {
   section {
-    width: 300px;
-    margin: 10px auto 10px;
-    background-color: white;
-    padding: 20px;
+    width: 700px;
+    display: flex;
+    justify-content: space-between;
   }
 
-  @media screen and (min-width:768px) {
-    section{
-        width: 700px;
-        display: flex;
-        justify-content: space-between;
-    }
+  p {
+    margin: 0 50px 80px;
+  }
 
-        p{
-          margin: 0 50px 80px;
-      }
+  h2 {
+    margin: 0 0 10px 50px;
+  }
 
-      h2{
-          margin: 0 0 10px 50px
-      }
+  .button {
+    float: left;
+    margin-left: 50px;
+  }
+  .button1 {
+    float: right;
+    margin-right: 50px;
+  }
 
-      .button{
-          float: left;
-      margin-left: 50px;
-      }
-      .button1{
-          float: right;
-          margin-right: 50px;
-      }
-
-      main{
-        margin: 30px auto 45px;
-      }
-        
-    }
-
-    
+  main {
+    margin: 30px auto 45px;
+  }
+}
